# AutoDeMark

./: .gitignore  LICENSE  README.md  bench.py  kernel.py  prepare.py  pyproject.toml  results.tsv  single_forward.py
sorawm/: configs.py  core.py  watermark_cleaner.py  watermark_detector.py
sorawm/cleaner/: e2fgvi_hq_cleaner.py
sorawm/models/model/: e2fgvi.py  e2fgvi_hq.py
sorawm/models/model/modules/: flow_comp.py
sorawm/utils/: download_utils.py
