[project]
name = "autodemark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "loguru>=0.7.3",
    "mmengine>=0.10.7",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "tqdm>=4.67.3",
]
